Fix takeover overflow scroll

--- a/components/takeover/index.css
+++ b/components/takeover/index.css
@@ -2,8 +2,8 @@
 
 .Takeover {
   display: none;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: fixed;
   left: 0;
   top: 0;
